# dioxus-init

./: Cargo.toml
examples/fullstack-auth/: Cargo.toml
examples/fullstack-auth/src/: auth.rs  main.rs
