[package]
name = "fullstack-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus-web={workspace=true,optional=true}
dioxus={features=["fullstack"],workspace=true}
dioxus-fullstack = {workspace=true}
dioxus-cli-config = {workspace=true,optional=true}
axum = {workspace=true,optional=true}
tokio = {workspace=true,optional=true,features=["full"]}
tower-http = { workspace = true, optional = true, features = ["auth"] }
async-trait = {version="0.1.71",optional=true}
sqlx = {version = "0.8.3",features=[
    "macros","migrate","postgres","sqlite","_unstable-all-types","tls-native-tls","runtime-tokio"
],optional=true}
http = {workspace=true,optional=true}
tower = {workspace=true,optional=true}

execute = "0.2.13"
serde = {workspace=true}
anyhow = {workspace=true}
axum_session = "0.16.0"
axum_session_auth = "0.16.0"

#[dependencies.axum_session]
#workspace=true
#optional = true

#[dependencies.axum_session_auth]
#workspace = true
#optional = true

[features]
default=[]
server=[
    "dioxus-cli-config",
    "axum",
    "tokio",
    "dioxus-fullstack/axum",
    "tower-http",
    "async-trait",
    "sqlx",
    #"axum_session",
    #"axum_session_auth",
    "http",
    "tower",
]
web = ["dioxus-web"]

[[example]]
name = "fullstack-auth"
path = "src/main.rs"



